# judgecal

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
docs/: log-format.md
examples/: README.md  generate_demo_log.py  sample-log.jsonl
scripts/: smoke.sh
src/judgecal/: __init__.py  __main__.py  agreement.py  cli.py  length.py  position.py  records.py  report.py  selfpref.py  stats.py
tests/: conftest.py  test_agreement.py  test_cli.py  test_example_pipeline.py  test_length.py  test_position.py  test_records.py  test_report.py  test_selfpref.py  test_stats.py
