[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "judgecal"
version = "0.1.0"
description = "Audit LLM-as-judge logs offline: human agreement (kappa), position bias, length bias, and self-preference — receipts for your judge, no model calls."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "JaydenCJ" }]
keywords = ["llm-as-judge", "evaluation", "bias", "kappa", "position-bias", "eval", "offline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
judgecal = "judgecal.cli:main"

[project.urls]
Homepage = "https://github.com/JaydenCJ/judgecal"
Repository = "https://github.com/JaydenCJ/judgecal"
Issues = "https://github.com/JaydenCJ/judgecal/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
